--- a/Day1/AdventOfCodeDay1.vcxproj
+++ b/Day1/AdventOfCodeDay1.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{7c7bec41-fdc7-4f9d-946b-5563ed7fe5e9}</ProjectGuid>
     <RootNamespace>AdventOfCodeDay1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Day1</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -127,7 +128,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="AdventOfCodeDay1.cpp" />
+    <ClCompile Include="Day1.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
