--- a/Day2/Day2.vcxproj.filters
+++ b/Day2/Day2.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="AdventOfCodeDay1.cpp">
+    <ClCompile Include="Day2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
