--- a/Day7/Day7.vcxproj
+++ b/Day7/Day7.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="Day7.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Day7.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
