added Day9 Part2
urgh... this one was tough. my solution is super slow, mostly because of the isInsidePolygon fct.
i did optimize some parts (only test edges not every point in the rect, cache the results for points...) but still takes ~3 minutes to run.

--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,9 @@ bld/
 # Visual Studio 2017 auto generated files
 Generated\ Files/
 
+# Rider Files
+.idea\
+
 # MSTest test Results
 [Tt]est[Rr]esult*/
 [Bb]uild[Ll]og.*
